# research-ingest

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
crates/research-core/: Cargo.toml
crates/research-core/src/: config.rs  job.rs  lib.rs  queue.rs  tools.rs  vault.rs
crates/research-extract/: Cargo.toml
crates/research-extract/src/: lib.rs
crates/research-ingest/: Cargo.toml
crates/research-ingest/src/: drop_server.rs  enable.rs  grok.rs  main.rs  process.rs
crates/research-mcp/: Cargo.toml
crates/research-mcp/src/: main.rs
crates/research-send/: Cargo.toml
crates/research-send/src/: main.rs
crates/research-zotero/: Cargo.toml
crates/research-zotero/src/: main.rs
packaging/: nix-notes.md
packaging/systemd/: research-ingest.service  research-zotero.service
prompts/: ingest_system.md
site/: index.html
site/assets/: style.css
