[package]
name = "research-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Text extraction from PDFs, images, and media for research-ingest"

[dependencies]
anyhow.workspace = true
pdf-extract.workspace = true
research-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
