[package]
name = "research-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Watch vault incoming/, extract content, process with Grok session"

[[bin]]
name = "research-ingest"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
notify.workspace = true
research-core.workspace = true
research-extract.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
