[package]
name = "research-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP stdio server exposing the Obsidian research vault to Grok"

[[bin]]
name = "research-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
research-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
