[package]
name = "research-zotero"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Zotero / Better BibTeX bridge into research-ingest"

[[bin]]
name = "research-zotero"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
notify.workspace = true
research-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
chrono.workspace = true
